--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Website2</title>
 </head>
 <body>
-<h1>This is my second website!!</h1>
+<h1>This is my second website</h1>
+<div>
+    <a href="breakout.html">Breakout</a>
+</div>
 </body>
 </html>
