Wed, Apr 3, 2024, 9:35 AM -07:00

--- a/breakout.html
+++ b/breakout.html
@@ -17,7 +17,9 @@
             <p>If you miss the ball, your score and the blocks will reset.</p>
             <button id="close-btn" class="btn">Close</button>
         </div>
-
+        <div class="center">
+            <button id="startButton">Start</button>
+        </div>
         <canvas id="canvas" width="800" height="600"></canvas>
 
     </body>
