--- a/breakout.html
+++ b/breakout.html
@@ -20,7 +20,7 @@
         <div class="center">
             <button id="startButton">Start</button>
         </div>
-        <canvas id="canvas" width="800" height="600"><button id="startButton">Start</button></canvas>
+        <canvas id="canvas" width="800" height="600"></canvas>
 
     </body>
     <script src="js/breakout.js"></script>
