Tue, Apr 9, 2024, 10:05 AM -07:00

--- a/insect.html
+++ b/insect.html
@@ -16,22 +16,27 @@
         <ul class="insects-list">
             <li><button class="choose-insect-btn">
                 <p>Fly</p>
-                <img src="images/fly.png" alt="">
+                <img src="images/fly.png" alt="Fly">
             </button></li>
             <li><button class="choose-insect-btn">
                 <p>Mosquito</p>
-                <img src="images/mosquitp.png" alt="">
+                <img src="images/mosquito.png" alt="Mosquito">
             </button></li>
             <li><button class="choose-insect-btn">
                 <p>Spider</p>
-                <img src="images/spider.png" alt="">
+                <img src="images/spider.png" alt="spider">
             </button></li>
             <li><button class="choose-insect-btn">
                 <p>Roach</p>
-                <img src="images/roach.png" alt="">
+                <img src="images/roach.png" alt="Roach">
             </button></li>
         </ul>
     </div>
+    <div class="screen-game-container" id="game-containergame-container"></div>
+    <h3 class="time" id="time">Time: 00:00</h3>
+    <h3 id="score" class="score">Score: 0</h3>
+    <h5 id="message" class="message">Are you annoyed yet? <br>
+    You are playing an impossible game.</h5>
 
 
 </body>
