--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <h1>This is my second website</h1>
 <div>
     <a href="breakout.html">Breakout</a>
+    <br>
+    <br>
+    <a href="insect.html">Insect Game</a>
 </div>
 </body>
 </html>
