--- a/insect.html
+++ b/insect.html
@@ -48,6 +48,12 @@
             Are you annoyed yet? <br>
             You are playing an impossible game!!
         </h5>
+        <h5 id="win-message" class="message">
+           Congrats!! You Win!
+        </h5>
+        <h5 id="lose-message" class="message">
+            You Losr!!
+         </h5>
     </div>
 </body>
 <script src= "js/insect.js"></script>
