--- a/insect.html
+++ b/insect.html
@@ -48,10 +48,10 @@
             Are you annoyed yet? <br>
             You are playing an impossible game!!
         </h5>
-        <h5 id="win-message" class="message">
+        <h5 id="win-message" class="win-message">
            Congrats!! You Win!
         </h5>
-        <h5 id="lose-message" class="message">
+        <h5 id="lose-message" class="lose-message">
             You Losr!!
          </h5>
     </div>
