--- a/insect.html
+++ b/insect.html
@@ -52,7 +52,7 @@
            Congrats!! You Win!
         </h5>
         <h5 id="lose-message" class="lose-message">
-            You Losr!!
+            You Lose!!
          </h5>
     </div>
 </body>
