--- a/hangman.html
+++ b/hangman.html
@@ -36,16 +36,17 @@
         <div class="word" id="word">
 
         </div>
+
     </div>
+
     <div class="popup-container" id="popup-container">
         <div class="popup">
-            <h2 id="final-message"></h2>
-            <button id="play-button">Play Again</button>
+
         </div>
     </div>
 
-    <div class ="notification-container" id ="notification-container">
-        <p>You have already entered this letter</p>
+    <div class ="notification-containern" id ="notification-container">
+
     </div>
 
 </body>
