--- a/hangman.html
+++ b/hangman.html
@@ -41,7 +41,7 @@
 
     <div class="popup-container" id="popup-container">
         <div class="popup">
-            <button class="play-agin">Play Again</button>
+            <button class="play-button">Play Again</button>
         </div>
     </div>
 
