Tue, Apr 23, 2024, 10:01 AM -07:00

--- a/hangman.html
+++ b/hangman.html
@@ -41,8 +41,7 @@
 
     <div class="popup-container" id="popup-container">
         <div class="popup">
-            <button class="play-button">Play Again</button>
-        </div>
+<button id="play-button" class="play-button">Play Again</button>        </div>
     </div>
 
     <div class ="notification-containern" id ="notification-container">
