--- a/hangman.html
+++ b/hangman.html
@@ -11,18 +11,23 @@
     <p>Find the hidden word - Enter a letter</p>
     <div class="game-container">
         <svg height="250" width="200" class="figure-container">
-            <line x1 ="60" y1="20" x2="140" y2="20" />
+            <!-- rod -->
+            <line x1="60" y1="20" x2="140" y2="20" />
             <line x1="140" y1="20" x2="140" y2="50" />
             <line x1="60" y1="20" x2="60" y2="230" />
             <line x1="20" y1="230" x2="100" y2="230" />
 
+            <!-- head -->
             <circle cx="140" cy="70" r="20" class="figure-part"/>
 
+            <!-- body -->
             <line x1="140" y1="90" x2="140" y2="150" class="figure-part"/>
 
+            <!-- arms -->
             <line x1="140" y1="120" x2="120" y2="100" class="figure-part"/>
             <line x1="140" y1="120" x2="160" y2="100" class="figure-part"/>
 
+            <!-- legs -->
             <line x1="140" y1="150" x2="120" y2="180" class="figure-part"/>
             <line x1="140" y1="150" x2="160" y2="180" class="figure-part"/>
         </svg>
@@ -39,15 +44,18 @@
 
     </div>
 
+    <!-- Container for final message -->
     <div class="popup-container" id="popup-container">
         <div class="popup">
-<button id="play-button" class="play-button">Play Again</button>        </div>
+            <h2 id="final-message">You Have Won</h2>
+            <button id="play-button">Play Again</button>
+        </div>
     </div>
 
-    <div class ="notification-containern" id ="notification-container">
-
+    <!-- Notification -->
+    <div class="notification-container" id="notification-container">
+        <p>You have already entered this letter</p>
     </div>
-
 </body>
 <script src="js/hangman.js"></script>
 </html>
