--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <br>
     <br>
     <a href="insect.html">Insect Game</a>
+    <br>
+    <br>
+    <a href="hangman.html">Hangman Game</a>
 </div>
 </body>
 </html>
