--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Website2</title>
 </head>
+<link rel="stylesheet" href="css/index.css">
 <body>
-<h1>This is my second website</h1>
-<div>
+    
+        <button id="start-button" class="start-button">Play Games</button>
+ 
+
+<div id="stuff" class="stuff">
+    <h1>This is my second website</h1>
     <a href="breakout.html">Breakout</a>
     <br>
     <br>
@@ -17,4 +22,6 @@
     <a href="hangman.html">Hangman Game</a>
 </div>
 </body>
+<script src= "js/index.js"></script>
+
 </html>
